--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "test": "jest --watch",
     "start": "nodemon index.js"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "express": "^4.18.2",
     "jest": "^29.4.1",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prisma": "^5.5.2"
   }
 }
